# robotframework-templateprocessor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TemplateProcessorCore.py  TemplateProcessorLibrary.py  TestFileGenerators.robot  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
tests/: TemplateBasedGenerator.robot  TemplateBasedGeneratorNew.robot  test_template_processor.py
tests/data/: ComplexCombinations_TEMPLATE.txt  DateTimeEdgeCases_TEMPLATE.txt  Demo_TEMPLATE.txt  EnvironmentalVars_TEMPLATE.txt  ErrorBadListType_TEMPLATE.txt  ErrorInvalidLoop_TEMPLATE.txt  ErrorMismatchedList_TEMPLATE.txt  ErrorMissingConstant_TEMPLATE.txt  First_TEMPLATE.txt  INCEdgeCases_TEMPLATE.txt  LoopEdgeCases_TEMPLATE.txt  LoopWithVars_TEMPLATE.txt  Loop_TEMPLATE.txt  MultiLoop_TEMPLATE.txt  MultipleINC_TEMPLATE.txt  MultipleLOOPINC_TEMPLATE.txt  NamedLoopIndex_TEMPLATE.txt  NegativeIndexShift_TEMPLATE.txt  NestedLoops_TEMPLATE.txt  ReturnContent_TEMPLATE.txt  Second_TEMPLATE.txt
tests/temp/: ComplexCombinations.txt  DateTimeEdgeCases.txt  DemoFile.txt  EnvironmentalVars.txt  FirstFileGenerated.txt  INCEdgeCases.txt  LoopEdgeCases.txt  Looped.txt  LoopedList.txt  MultiLooped.txt  MultipleINC.txt  MultipleLOOPINC.txt  NegativeIndexShift.txt  NestedLoops.txt  ReturnContent.txt  SecondFileGenerated.txt
